# SimpleRayTrace

./: BVH_Sphere.h  CMakeLists.txt  RayTrace.rar  light.h  main.cpp  sphere.h  vec3d.h  vecFunctions.h
